--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,32 @@ body {
     font-size: 16px;
 }
 
+#cabecera {
+    background: #33a;
+    color: white;
+    margin: 0;
+    font-weight: bold;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
+    padding: 0.5em;
+}
+
 #container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     border: 1px solid #ddd;
     margin: 0 auto;
 }
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    padding: 1em;
+}
+
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
