--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #333;
     margin: 0;
     padding: 0;
