--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
+    background: #1e1f24;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    color: red;
+    color: #333;
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -13,7 +14,7 @@ body {
     margin: 0;
     font-weight: bold;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
 }
 
 #container {
@@ -28,6 +29,7 @@ body {
 }
 
 #post {
+    background: white;
     padding: 1em;
 }
 
