--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    color: red;
+    color: #333;
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -35,4 +35,12 @@ body {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+
+#footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+
 }
